Fix: couldnt set speed on mobile

--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ body {
     overflow: hidden;
     transition: all .5s;
     background-color: var(--back);
-
+    z-index: 6;
 
 
 }
